--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <div class="wrapper">
-      <img src="crown.svg" width="125">
+      <img src="Crown.svg" width="125">
       <h1>
         Keep<br> Calm
         <span>and</span>
