--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- This is the title of the page - what's written will appear at the top of the browser window -->
-  <title>Keep Calm and Carry On - @cocotopia</title>
+  <title>Keep Calm and Carry On - @cocotopia 2017</title>
 
   <!-- This links to the stylesheet for this page -->
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -18,6 +18,7 @@
       <br> On
     </h1>
     <p>@cocotopia</p>
+    <p>Lima - 2017</p>
   </div>
 </body>
 <script type="text/javascript">
