Agregando Ciudad y País

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
       <span>and</span> Carry
       <br> On
     </h1>
-    <p>@cocotopia</p>
-    <p>Lima - 2017</p>
+    <p><strong>@cocotopia</strong></p>
+    <p><i>Lima - Perú</i></p>
+    <p>2017</p>
   </div>
 </body>
 <script type="text/javascript">
