--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
 </body>
 <script type="text/javascript">
-  toggle_color("#61beb3", "#90a2c6", 3000, 500);
+  toggle_color("blue", "pink", 3000, 500);
 
   function toggle_color(color1, color2, cycle_time, wait_time) {
 
