--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Keep Calm and Carry On - @cocotopia 2017</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+  <script>
+    var OneSignal = window.OneSignal || [];
+    OneSignal.push(function() {
+      OneSignal.init({
+        appId: "289d39e0-3166-4acd-a723-8f4370393f88",
+        autoRegister: false,
+        notifyButton: {
+          enable: true,
+        },
+      });
+    });
+  </script>
 </head>
 
 <body>
