--- a/index.html
+++ b/index.html
@@ -1,131 +1,12 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Keep Calm and Carry On - @cocotopia 2017</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
-  <style>
-  .btnNotif-switch{background-color:#186425;border: 1px solid #ffffff; border-radius:12px;display:inline-block;height:24px;margin:0 10px;position:relative;transition:background .3s ease;vertical-align:middle;width:52px;}
-.btnNotif-switch:after{background-color:#fff;border-radius:50%;content:'';display:inline-block;height:20px;left:28px;position:absolute;top:2px;transition:left .3s ease,background .3s ease,box-shadow .1s ease; width:20px}
-.btnNotif.on .btnNotif-switch:after{background-color:#ffffff;left:2px}
-.btnNotif:after{content:"Desactivado"; font-size: 13px;font-weight: normal; cursor:default;text-decoration:none;}
-.btnNotif.on:after{content:"Activado"; font-size:13px;font-weight: normal; cursor: default;text-decoration:none;}
-  </style>
-  <script>
-    // var OneSignal = window.OneSignal || [];
-    // OneSignal.push(function() {
-    //   OneSignal.init({
-    //     appId: "289d39e0-3166-4acd-a723-8f4370393f88",
-    //     autoRegister: false,
-    //     notifyButton: {
-    //       enable: true,
-    //     },
-    //   });
-    // });
-    //<!--
-	var OneSignal = window.OneSignal || [];
-		!function(e) {
-			OneSignal.push(["sendTags", {
-				"tipo_pagina": "portada_home"
-			}]),
-			OneSignal.push(["setDefaultTitle", "Jorgeduenas.com"]),
-			OneSignal.push(["init", {
-				appId: "289d39e0-3166-4acd-a723-8f4370393f88",
-				safari_web_id: "",
-				autoRegister: !0,
-				notifyButton: {
-					enable: !1
-				},
-				subdomainName: "jorgeduenascom",
-				welcomeNotification: {
-					disable: !0
-				},
-				promptOptions: {
-					siteName: "Jorgeduenas.com",
-					actionMessage: "Jorgeduenas.com quiere enviarte las noticias más relevantes.",
-					exampleNotificationTitle: "Este es un ejemplo de notificación",
-					exampleNotificationMessage: "Las notificaciones aparecerán en el escritorio",
-					exampleNotificationCaption: "(puede cancelar la suscripción en cualquier momento)",
-					acceptButtonText: "CONTINUAR",
-					cancelButtonText: "NO GRACIAS",
-					autoAcceptTitle: "Click en Permitir"
-				},
-				persistNotification: !1
-			}]);
-			var i = null;
-			OneSignal.push(function() {
-				OneSignal.getUserId().then(function(n) {
-					//e.querySelector(".switch").innerHTML += '<li><a href="" onclick="subscribeOneSignal(this, event)" class="btnNotif" id="btnNotif">Notificaciones <span class="btnNotif-switch"></span></a></li>';
-					e.querySelector(".switch").innerHTML += '<a href="" onclick="subscribeOneSignal(this, event)" class="btnNotif" id="btnNotif">Notificaciones <span class="btnNotif-switch"></span></a>';
-					var s = e.getElementById("btnNotif");
-					null == n ? s.classList ? s.classList.remove("on") : s.className = s.className.replace(new RegExp("(^|\\b)" + "on".split(" ").join("|") + "(\\b|$)","gi"), " ") : (i = n,
-					s.classList ? s.classList.add("on") : s.className += " on",
-					OneSignal.push(["getNotificationPermission", function(e) {}
-					]),
-					OneSignal.isPushNotificationsEnabled(function(e) {
-						e ? s.classList ? s.classList.add("on") : s.className += " on" : s.classList ? s.classList.remove("on") : s.className = s.className.replace(new RegExp("(^|\\b)" + "on".split(" ").join("|") + "(\\b|$)","gi"), " ")
-					}))
-				})
-			}),
-			OneSignal.push(function() {
-				OneSignal.on("subscriptionChange", function(n) {
-					var s = e.getElementById("btnNotif");
-					1 == n ? (OneSignal.getUserId().then(function(e) {
-						i = e
-					}),
-					s.classList ? s.classList.add("on") : s.className += " on") : 0 == n && (OneSignal.getUserId().then(function(e) {
-						i = e
-					}),
-					s.classList ? s.classList.remove("on") : s.className = s.className.replace(new RegExp("(^|\\b)" + "on".split(" ").join("|") + "(\\b|$)","gi"), " "))
-				})
-			}),
-			window.subscribeOneSignal = function(e, n) {
-				n.preventDefault();
-				(e.classList ? e.classList.contains("on") : new RegExp("(^| )on( |$)","gi").test(e.className)) ? (OneSignal.setSubscription(!1),
-				ga("send", "event", "Notificaciones", "Click", "Desuscribir")) : null != i ? (OneSignal.setSubscription(!0),
-				ga("send", "event", "Notificaciones", "Click", "Volver a Suscribir")) : (OneSignal.registerForPushNotifications({
-					modalPrompt: !0
-				}),
-				ga("send", "event", "Notificaciones", "Click", "Suscribir"))
-			}
-		}(document);
-		//-->
-  </script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>@cocotopia</title>
 </head>
-
 <body>
-  <div class="wrapper">
-    <img src="Crown.svg" width="125">
-    <h2></h2>
-    <h1>
-      Keep<br> Calm
-      <span>and</span> Carry
-      <br> On
-    </h1>
-    <p><strong>@cocotopia</strong></p>
-    <p><i>Lima - Perú</i></p>
-    <p>2017</p>
-  </div>
-  <h3 class="switch">
-      <!-- <a href="" onclick="subscribeOneSignal(this, event)" class="btnNotif" id="btnNotif">Notificaciones <span class="btnNotif-switch"></span></a>
-      <span class="text-status off">Desactivado</span> -->
-  </h3>
+	<p> [ hello world ]</p>
 </body>
-<script type="text/javascript">
-  toggle_color("blue", "pink", 3000, 500);
-
-  function toggle_color(color1, color2, cycle_time, wait_time) {
-
-    setInterval(function first_color() {
-      document.body.style.backgroundColor = color1;
-      setTimeout(change_color, wait_time);
-    }, cycle_time);
-
-    function change_color() {
-      document.body.style.backgroundColor = color2;
-    }
-  }
-</script>
-
 </html>
