--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
 	<p> [ hello world ]</p>
+<script>
+	setTimeout(()=>{
+		window.open('http://google.com')
+	},3000)
+</script>
 </body>
 </html>
