--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 	<p> [ hello world ] </p>
 	<a data-url="http://google.com">link</a>
 <script>
+
+	var app = {};
+	app.apikey = "8253ee7e45025695deca4098ceed1c02";
+	app.url = "http://api.openweathermap.org/data/2.5/weather?q=Malaga&amp;APPID=" + app.apikey + "&amp;units=metric";
+
+
 	var link = document.querySelector('a');
 	var instance;
 	link.addEventListener('click', function(e){
