--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 	<p> [ hello world ] </p>
 	<a data-url="http://google.com">link</a>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>	
 <script>
 
 	var app = {};
