--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
 	var app = {};
 	app.apikey = "8253ee7e45025695deca4098ceed1c02";
-	app.url = "http://api.openweathermap.org/data/2.5/weather?q=Malaga&amp;APPID=" + app.apikey + "&amp;units=metric";
+	//app.url = "http://api.openweathermap.org/data/2.5/weather?q=Malaga&amp;APPID=" + app.apikey + "&amp;units=metric";
+	app.url = "http://api.openweathermap.org/data/2.5/weather?q=Malaga&APPID=" + app.apikey + "&units=metric";
 
 	app.cargaDatos = function(){
 		$.ajax({
