--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<p> [ hello world ] </p>
-	<a data-url="http://google.com">link</a>
+	<a data-url="https://google.com">link</a>
 
 	<section class="section__main">
 			<div class="section__content">
@@ -25,7 +25,7 @@
 	var app = {};
 	app.apikey = "8253ee7e45025695deca4098ceed1c02";
 	////app.url = "http://api.openweathermap.org/data/2.5/weather?q=Malaga&amp;APPID=" + app.apikey + "&amp;units=metric";
-	app.url = "http://api.openweathermap.org/data/2.5/weather?q=Malaga&APPID=" + app.apikey + "&units=metric";
+	app.url = "https://api.openweathermap.org/data/2.5/weather?q=Malaga&APPID=" + app.apikey + "&units=metric";
 
 	app.cargaDatos = function(){
 		$.ajax({
