--- a/index.html
+++ b/index.html
@@ -24,52 +24,97 @@
 
 	var app = {};
 	app.apikey = "8253ee7e45025695deca4098ceed1c02";
-	////app.url = "http://api.openweathermap.org/data/2.5/weather?q=Malaga&amp;APPID=" + app.apikey + "&amp;units=metric";
 	app.url = "https://api.openweathermap.org/data/2.5/weather?q=Malaga&APPID=" + app.apikey + "&units=metric";
 
 	app.cargaDatos = function(){
 		$.ajax({
-		url: app.url,
+			url: app.url,
 			success: function( data ) {
-				console.log(data);
 				app.datos = data;
 				app.procesaDatos();
 			},
 			error: function(){
-				console.log("¡Ups! No puedo obtener información de la API");
+				alert("¡Ups! No puedo obtener información de la API");
 			}
 		});
 	}
-
+	
 	app.procesaDatos = function(){
 		app.condicionNombre = app.datos.weather[0].main;
-		app.temperatura = app.datos.main.temp, 10;
+		app.temperatura = app.datos.main.temp;
+
 		var condicionIcono = app.datos.weather[0].icon;
 		app.icono = app.obtenIcono( condicionIcono );
+
 		app.muestra();
-	}
 
+	} 
+	
 	app.muestra = function(){
-		$('#js_w_temp').append("&lt;p class='weather_temperature'&gt;" + app.temperatura + "º&lt;/p&gt;");
-		$('#js_w_icon').append(" &lt;i class='wi " + app.icono + "'&gt;&lt;/i&gt;");
-		$('#js_w_icon').append("&lt;p class='weather_name'&gt;" + app.condicionNombre.toUpperCase() + "&lt;/p&gt;");
-	}
+		$('#js_w_temp').append("<p class='weather_temperature'>" +  app.temperatura + "º</p>");
+		$('#js_w_icon').append(" <i class='wi " + app.icono + "'></i>");
 
+		$('#js_w_icon').append("<p class='weather_name'>" +  app.condicionNombre.toUpperCase() + "</p>");
+
+	}
+	
 	app.obtenIcono = function( weatherIcon ) {
+
 		var icon;
 		switch( weatherIcon ){
 			case "01d":
 			case "01n":
-				icon = "wi-day-sunny";
+			icon = "wi-day-sunny";
 			break;
 			case "02d":
 			case "02n":
-				icon = "wi-day-cloudy";
+			icon = "wi-day-cloudy";
 			break;
+
+			case "03d":
+			case "03n":
+			icon = "wi-cloud";
+			break;
+
+			case "04d":
+			case "04n":
+			icon = "wi-cloudy";
+			break;
+
+			case "09d":
+			case "09n":
+			icon = "wi-rain";
+			break;
+
+			case "10d":
+			case "10n":
+			icon = "wi-day-rain-mix";
+			break;
+
+			case "11d":
+			case "11n":
+			icon = "wi-thunderstorm";
+			break;
+
+			case "13d":
+			case "13n":
+			icon = "wi-snow";
+			break;
+
+			case "50d":
+			case "50n":
+			icon = "wi-fog";
+			break;
+
+			default:
+			icon = "wi-day-sunny";
+			break;
+
 		}
+
 		return icon;
 	}
-
+	
 	app.cargaDatos();
 
 	var link = document.querySelector('a');
