--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<section class="section__main">
 			<div class="section__content">
 					<h1>Conectando con la API de tiempo</h1>
-					<h2>El tiempo en Málaga</h2>
+					<h2>El tiempo en Lima</h2>
 					<div class="weather__block" id="js_w_temp"></div>
 					<div class="weather__block" id="js_w_icon"></div>
 			</div>
