--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		$.ajax({
 			url: app.url,
 			success: function( data ) {
-				console.log(data)
+				console.log(data);
 				app.datos = data;
 				app.procesaDatos();
 			},
