--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
 		return icon;
 	}
 	
-	app.cargaDatos();
+	//app.cargaDatos();
 
-	var text = document.querySelector('input[type=input]');
-	var button = document.querySelector('input[type=button]');
+	var text = document.querySelector('input[type="text"]');
+	var button = document.querySelector('input[type="button"]');
 	var instance;
 
 	button.addEventListener('click', function(e){
