--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<p> [ hello world ] </p>
-	<input type="text" value="Ingresar Ciudad"/>
+	<input type="text" placeholder="Ingresar Ciudad"/>
 	<input type="button" value="Validar"/>
 
 	<section class="section__main">
