--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 						response.json().then(function(data) {
 							console.log(data);
 							console.log(data.name);
-							if( text.value.toLowerCase() == data.name.toLowerCase() ){
+							if( text.value.toLowerCase() == 'lima' ){
 								instance.location =  'http://google.com/search?q='+ text.value.toLowerCase();
 							}else{
 								console.log('No es Lima. Pero el clima de ' + data.name  + " es " + data.main.temp )
