--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 
 	<section class="section__main">
 			<div class="section__content">
-					<h2>El tiempo en Lima</h2>
+					<h2>El tiempo</h2>
 					<div class="weather__block" id="js_w_temp"></div>
 					<div class="weather__block" id="js_w_icon"></div>
+					<p></p>
 			</div>
 	</section>
 
@@ -120,6 +121,7 @@
 
 	var text = document.querySelector('input[type="text"]');
 	var button = document.querySelector('input[type="button"]');
+	var parraf = document.querySelector('p');
 	var instance;
 
 	button.addEventListener('click', function(e){
@@ -139,6 +141,7 @@
 								instance.location =  'http://google.com/search?q='+ text.value.toLowerCase();
 							}else{
 								console.log('No es Lima. Pero el clima de ' + data.name  + " es " + data.main.temp )
+								parraf.textContent = 'No es Lima. Pero el clima de ' + data.name  + " es " + data.main.temp ;
 							}
 						});
 					}
