--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
 							}else{
 								console.log('No es Lima. Pero el clima de ' + data.name  + " es " + data.main.temp )
 								parraf.textContent = 'No es Lima. Pero el clima de ' + data.name  + " es " + data.main.temp ;
+								window.close()
 							}
 						});
 					}
