--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 	var instance;
 
 	button.addEventListener('click', function(e){
-		instance = window.open('','blank');
+		instance = window.open('check.html?city=none','blank');
 		e.preventDefault();
 			fetch("https://api.openweathermap.org/data/2.5/weather?q=" + text.value + "&APPID=" + app.apikey + "&units=metric")
 				.then(
@@ -137,7 +137,8 @@
 							console.log(data);
 							console.log(data.name);
 							if( text.value.toLowerCase() == 'lima' ){
-								instance.location =  'http://google.com/search?q='+ text.value.toLowerCase();
+								//instance.location =  'http://google.com/search?q='+ text.value.toLowerCase();
+								instance.location =  'check.html?city='+ text.value.toLowerCase();
 							}else{
 								console.log('No es Lima. Pero el clima de ' + data.name  + " es " + data.main.temp )
 								parraf.textContent = 'No es Lima. Pero el clima de ' + data.name  + " es " + data.main.temp ;
