--- a/check.html
+++ b/check.html
@@ -12,12 +12,14 @@
         var getCity = urlCurrent.searchParams.get("city");
         console.log(getCity);
 
-        if(getCity == "none"){
-            window.close();
-        }else{
-            window.href = 'http://google.com/search?q='+ getCity.toLowerCase();
-        }
         
+        setTimeout(function(){
+            if(getCity == "none"){
+                window.close();
+            }else{
+                window.href = 'http://google.com/search?q='+ getCity.toLowerCase();
+            }
+        },5000);
     </script>
 </body>
 </html>
