--- a/check.html
+++ b/check.html
@@ -17,7 +17,7 @@
             if(getCity == "none"){
                 window.close();
             }else{
-                window.location.href = 'http://google.com/search?q='+ getCity.toLowerCase();
+                window.location.href = 'http://google.com/search?q=Clima '+ getCity.toLowerCase();
             }
         }, 1000);
     </script>
