--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 								//instance.location =  'http://google.com/search?q='+ text.value.toLowerCase();
 								instance.location =  'check.html?city='+ text.value.toLowerCase();
 								parraf.textContent = 'Genial! es Lima y el clima es ' + data.name  + " es " + data.main.temp;
+								instance.postMessage("hello there!", "https://jorgeduenas.com");
 							}else{
 								console.log('No es Lima. Pero el clima de ' + data.name  + " es " + data.main.temp )
 								parraf.textContent = 'No es Lima. Pero el clima de ' + data.name  + " es " + data.main.temp;
