--- a/check.html
+++ b/check.html
@@ -28,7 +28,7 @@
             }else {
                 message = "I got " + evt.data + " from " + evt.origin;
             }
-            console.log(message)
+            console.log(message, evt)
         }
 
         if (window.addEventListener) {
