--- a/vue-router/index.html
+++ b/vue-router/index.html
@@ -1,1 +1,18 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>vue-router-01</title><link href=/static/css/app.52dd56348846fb2f39e7f270fbf5c958.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=/static/js/vendor.1748317793fd05195ff8.js></script><script type=text/javascript src=/static/js/app.35e3ecfeeb9da21ef4a4.js></script></body></html>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset=utf-8>
+    <meta name=viewport content="width=device-width,initial-scale=1">
+    <title>vue-router-01</title>
+    <link href=/static/css/app.css rel=stylesheet>
+</head>
+
+<body>
+    <div id=app></div>
+    <script type=text/javascript src=/static/js/manifest.js></script>
+    <script type=text/javascript src=/static/js/vendor.js></script>
+    <script type=text/javascript src=/static/js/app.js></script>
+</body>
+
+</html>
